# draft

./: .gitignore  Makefile  README.md  diff.txt  pyproject.toml
.github/workflows/: ci.yml
scripts/: review-spec-definition-of-done.md  review.md  review.sh  run_agent.py
src/draft/: api.py  cli.py  command_babysit.py  command_common.py  command_continue.py  command_create.py  command_delete.py  command_fix_pr.py  command_init.py  command_list.py  command_prune.py  command_status.py  config.py  errors.py  hooks.py  pipelines.py  runs.py  types.py
src/draft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/draft/steps/: __init__.py
src/draft/steps/babysit_pr/: __init__.py  babysit_pr.md
src/draft/steps/code_spec/: __init__.py  code_spec.md  commit_message.md
src/draft/steps/create_worktree/: __init__.py
src/draft/steps/delete_worktree/: __init__.py
src/draft/steps/fix_pr/: __init__.py  commit_message.md  fix_pr.md
src/draft/steps/implement_spec/: __init__.py  _live_status.py  branch_slug.md  implement_spec.md  original_spec.py  original_spec_commits_only.md  original_spec_open_pr.md  original_spec_prior_run.md  static_verify_errors.md  suggest_checks.md  suggested_verify_errors.md  summarize_status.md  verify_commands.md  verify_errors.md
src/pipeline/: __init__.py  context.py  engine.py  heartbeat.py  metrics.py  pipeline.py  runner.py
tests/draft/: test_babysit_pr.py  test_code_spec.py  test_commands.py  test_config.py  test_hooks.py  test_live_status.py  test_original_spec.py  test_pr_open.py  test_review_implementation.py  test_run_agent.py
tests/e2e/: test_api_create.py  test_cli_help.py
tests/pipeline/: test_context.py  test_engine.py  test_heartbeat.py  test_metrics.py  test_pipeline.py  test_runner.py
(+17 files in other folders)
