[build-system]
requires = ["setuptools >= 68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "draft"
version = "0.1.0"
description = "CLI tool to run a spec through an AI-powered pipeline and open a PR"
requires-python = ">= 3.12"
authors = [{name = "Vitalii Mishchenko"}]
dependencies = ["PyYAML"]

[project.optional-dependencies]
dev = ["pytest", "ruff>=0.6,<1"]

[project.scripts]
draft = "draft.cli:main"

[tool.setuptools.package-data]
"draft.steps.implement_spec" = ["*.md"]
"draft.steps.open_pr" = ["*.md"]
"draft.steps.babysit_pr" = ["*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".venv", "build", "dist", "*.egg-info", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # codebase has pervasive long lines; formatting is handled by ruff format
